# kelpie

./: .gitignore  .mise.toml  .swiftlint.yml  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md  Tuist.swift  Workspace.swift  docs.md  eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.base.json
.github/workflows/: android.yml  ios.yml  lint.yml  macos.yml  pages.yml  release.yml
apps/android/: settings.gradle.kts
apps/android/app/src/main/cpp/: CMakeLists.txt  kelpie_jni.cpp
apps/ios/: .gitignore  NATIVE_INTEGRATION.md  Project.swift
apps/linux/: CMakeLists.txt  Dockerfile  docker-compose.yml
apps/macos/: NATIVE_INTEGRATION.md  Project.swift  project.yml
apps/windows/: CMakeLists.txt
apps/windows/resources/: kelpie.rc  manifest.xml  resource.h
apps/windows/src/: bookmarks_view.cpp  bookmarks_view.h  device_info_windows.cpp  device_info_windows.h  history_view.cpp  history_view.h  main.cpp  mdns_windows.cpp  mdns_windows.h  network_inspector.cpp  network_inspector.h  settings_view.cpp  settings_view.h  toast_view.cpp  toast_view.h  url_bar.cpp  url_bar.h  win32_browser_view.cpp  win32_browser_view.h  win32_shell.cpp  win32_shell.h  windows_app.cpp  windows_app.h  windows_app_server.cpp
docs/: architecture.md  brief.md  browser-engines.md  bugs.md  cli.md  engine-monitoring.md  functionality.md  tech-stack.md  testing.md
docs/api/: README.md  ai.md  browser.md  core.md  devtools.md  llm.md
docs/cli/: README.md  advanced.md  group.md
docs/done/: 2026-04-03-3d-inspector-native-controls.md  2026-04-03-core-ai-shared-library.md  2026-04-03-floating-menu-dynamic-radius.md  2026-04-03-hf-token-flow.md  2026-04-03-macos-ai-shell-alignment.md
docs/plans/: 2026-03-30-apple-tv-external-display.md  2026-03-30-macos-app.md  2026-03-31-macos-centered-viewport-shell.md  2026-04-01-desktop-shared-core-refactor.md  2026-04-01-engine-chromium-desktop.md  2026-04-01-ipad-mobile-stage.md  2026-04-01-linux-cef-wiring.md  2026-04-01-linux-gui-headless-plan.md  2026-04-01-macos-gecko-bundled.md  2026-04-01-macos-gecko-renderer.md  2026-04-01-monitoring-service.md  2026-04-01-shared-viewport-presets-mcp.md  2026-04-01-windows-desktop-plan.md  2026-04-01-windows-linux-portability.md  README.md  (+35 more)
monitoring/: Makefile
native/: CMakeLists.txt
native/core-ai/: CMakeLists.txt  README.md
native/core-ai/include/kelpie/: ai_c_api.h
native/core-ai/src/: ai_c_api.cpp  ai_c_api_internal.h  hf_cloud_client.cpp  hf_cloud_client.h  model_catalog.cpp  model_catalog.h  model_store.cpp  model_store.h  ollama_client.cpp  ollama_client.h
native/core-ai/tests/: CMakeLists.txt  test_ai_catalog.cpp  test_ai_hf_cloud.cpp  test_ai_ollama.cpp  test_ai_store.cpp
native/core-automation/: CMakeLists.txt
native/core-automation/include/kelpie/: automation_c_api.h  handler_context.h  renderer_interface.h  response_helpers.h
native/core-automation/include/mollotov/: automation_c_api.h  handler_context.h  renderer_interface.h  response_helpers.h
native/core-automation/src/: automation_c_api.cpp  handler_context.cpp  response_helpers.cpp
native/core-automation/tests/: CMakeLists.txt  test_handler_context.cpp  test_response_helpers.cpp
native/core-mcp/: CMakeLists.txt
native/core-mcp/include/kelpie/: mcp_c_api.h  mcp_registry.h  mcp_tool.h
native/core-mcp/include/mollotov/: mcp_c_api.h  mcp_registry.h  mcp_tool.h
native/core-mcp/src/: mcp_c_api.cpp  mcp_registry.cpp  mcp_tool.cpp
native/core-mcp/tests/: CMakeLists.txt  test_mcp_registry.cpp
native/core-protocol/: CMakeLists.txt
native/core-protocol/include/kelpie/: constants.h  error_codes.h  platform.h  protocol.h  types.h  viewport_presets_c_api.h
native/core-protocol/include/mollotov/: constants.h  error_codes.h  platform.h  protocol.h  types.h  viewport_presets_c_api.h
native/core-protocol/src/: error_codes.cpp  platform.cpp  viewport_presets_c_api.cpp
native/core-state/: CMakeLists.txt
native/core-state/include/kelpie/: bookmark_store.h  console_store.h  history_store.h  network_traffic_store.h  state_c_api.h
native/core-state/include/mollotov/: bookmark_store.h  console_store.h  history_store.h  network_traffic_store.h  state_c_api.h
native/core-state/src/: bookmark_store.cpp  console_store.cpp  history_store.cpp  network_traffic_store.cpp  state_c_api.cpp  state_c_api_internal.h  store_support.h
native/core-state/tests/: CMakeLists.txt  test_bookmark_store.cpp  test_console_store.cpp  test_history_store.cpp  test_network_traffic_store.cpp
native/engine-chromium-desktop/: CMakeLists.txt
native/engine-chromium-desktop/include/kelpie/: cef_app_factory.h  cef_renderer.h  desktop_app.h  desktop_bridge.h  desktop_engine.h  desktop_http_server.h  desktop_mcp_server.h  desktop_mdns.h  desktop_router.h
native/engine-chromium-desktop/src/: cef_app_factory.cpp  cef_renderer.cpp  desktop_app.cpp  desktop_bridge.cpp  desktop_engine.cpp  desktop_engine_stub.cpp  desktop_http_server.cpp  desktop_mcp_server.cpp  desktop_router.cpp
native/engine-chromium-desktop/src/handlers/: bookmark_handler.cpp  bookmark_handler.h  browser_mgmt_handler.cpp  browser_mgmt_handler.h  console_handler.cpp  console_handler.h  cookie_handler.cpp  cookie_handler.h  device_handler.cpp  device_handler.h  dom_handler.cpp  dom_handler.h  evaluate_handler.cpp  evaluate_handler.h  handler_support.h  history_handler.cpp  history_handler.h  interaction_handler.cpp  interaction_handler.h  navigation_handler.cpp  navigation_handler.h  network_handler.cpp  network_handler.h  renderer_handler.cpp  renderer_handler.h  screenshot_handler.cpp  screenshot_handler.h  scroll_handler.cpp  scroll_handler.h  viewport_handler.cpp  viewport_handler.h
native/engine-chromium-desktop/tests/: CMakeLists.txt  test_desktop_handlers.cpp  test_desktop_mcp_server.cpp  test_desktop_router.cpp
scripts/: android-run.sh  android-select.sh  build-linux-package-repos.sh  build-linux-runtime-bundle.sh  download-cef.sh  download-gecko-runtime.sh  ios-select.sh  package-linux-appimage.sh  package-linux-deb.sh  package-linux-rpm.sh
site/: index.html
web/: index.html
(+367 files in other folders)
